# AviSynthPlus-RIFE

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
msvc/: RIFE.sln  RIFE.vcxproj  RIFE.vcxproj.filters
src/: plugin.cpp  rife.cpp  rife.h  rife.rc  rife_flow_tta_avg.comp.hex.h  rife_flow_tta_temporal_avg.comp.hex.h  rife_ops.h  rife_out_tta_temporal_avg.comp.hex.h  rife_postproc.comp.hex.h  rife_postproc_tta.comp.hex.h  rife_preproc.comp.hex.h  rife_preproc_tta.comp.hex.h  rife_v2_flow_tta_avg.comp.hex.h  rife_v2_flow_tta_temporal_avg.comp.hex.h  rife_v4_timestep.comp.hex.h  warp.comp.hex.h  warp.cpp  warp_pack4.comp.hex.h  warp_pack8.comp.hex.h
